[gd_scene load_steps=3 format=3 uid="uid://d4hog7b83h285"]

[ext_resource type="Script" path="res://app/common/components/level_button.gd" id="1_3vyn4"]
[ext_resource type="Theme" uid="uid://ifks2l7to85c" path="res://Themes/level_button.tres" id="1_uuask"]

[node name="LevelButtonSpaced" type="HBoxContainer" groups=["LevelButton"]]
offset_right = 396.0
offset_bottom = 91.0
size_flags_horizontal = 3
script = ExtResource("1_3vyn4")
ratio_left = -0.2
ratio_right = -0.2

[node name="LeftSpacing" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="level_button" type="Button" parent="."]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("1_uuask")
text = "0"

[node name="RightSpacing" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="level_button" to="." method="_on_level_button_pressed"]
